--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -132,3 +132,34 @@ body {
     }
   }
 }
+
+.login-form{
+  grid-area: 'main';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  input{
+    margin: 1rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: 0.1rem solid lightgray;
+  }
+  button{
+    margin: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    border: 0.1rem solid lightgray;
+    background: transparent;
+    cursor: pointer;
+    &:hover{
+      box-shadow: 0 0 0.5rem 0.1rem lightgray;
+    }
+    &:active{
+      box-shadow: none;
+    }
+  }
+  p{
+    color: red;
+  }
+}
