--- a/src/Styling/index.css
+++ b/src/Styling/index.css
@@ -135,7 +135,7 @@ body {
 }
 
 .login-form,
-.signup-form {
+.signup-form, .delete-form {
   grid-area: "main";
   display: flex;
   flex-direction: column;
@@ -143,14 +143,14 @@ body {
   padding: 2rem;
 }
 .login-form input,
-.signup-form input {
+.signup-form input, .delete-form input {
   margin: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: 0.1rem solid lightgray;
 }
 .login-form button,
-.signup-form button {
+.signup-form button, .delete-form button {
   margin: 1rem;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
@@ -159,15 +159,15 @@ body {
   cursor: pointer;
 }
 .login-form button:hover,
-.signup-form button:hover {
+.signup-form button:hover, .delete-form button:hover {
   box-shadow: 0 0 0.5rem 0.1rem lightgray;
 }
 .login-form button:active,
-.signup-form button:active {
+.signup-form button:active, .delete-form button:active {
   box-shadow: none;
 }
 .login-form p,
-.signup-form p {
+.signup-form p, .delete-form p {
   color: red;
 }
 
