--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -137,7 +137,7 @@ body {
 }
 
 .login-form,
-.signup-form {
+.signup-form, .delete-form {
   grid-area: 'main';
   display: flex;
   flex-direction: column;
