Added confirmation before deleting account

--- a/src/Styling/index.css
+++ b/src/Styling/index.css
@@ -135,7 +135,8 @@ body {
 }
 
 .login-form,
-.signup-form, .delete-form {
+.signup-form,
+.delete-form {
   grid-area: "main";
   display: flex;
   flex-direction: column;
@@ -143,14 +144,16 @@ body {
   padding: 2rem;
 }
 .login-form input,
-.signup-form input, .delete-form input {
+.signup-form input,
+.delete-form input {
   margin: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: 0.1rem solid lightgray;
 }
 .login-form button,
-.signup-form button, .delete-form button {
+.signup-form button,
+.delete-form button {
   margin: 1rem;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
@@ -159,16 +162,40 @@ body {
   cursor: pointer;
 }
 .login-form button:hover,
-.signup-form button:hover, .delete-form button:hover {
+.signup-form button:hover,
+.delete-form button:hover {
   box-shadow: 0 0 0.5rem 0.1rem lightgray;
 }
 .login-form button:active,
-.signup-form button:active, .delete-form button:active {
+.signup-form button:active,
+.delete-form button:active {
   box-shadow: none;
 }
 .login-form p,
-.signup-form p, .delete-form p {
+.signup-form p,
+.delete-form p {
   color: red;
+}
+
+.confirmation {
+  padding: 1rem;
+}
+.confirmation__btns {
+  display: flex;
+  justify-content: space-evenly;
+}
+.confirmation__btns button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid lightgray;
+  background: transparent;
+  cursor: pointer;
+}
+.confirmation__btns button:hover {
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.confirmation__btns button:active {
+  box-shadow: none;
 }
 
 /*# sourceMappingURL=index.css.map */
