--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -138,7 +138,7 @@ body {
 
 .login-form,
 .signup-form,
-.delete-form {
+.delete-form, .update-form {
   grid-area: 'main';
   display: flex;
   flex-direction: column;
