--- a/src/Styling/index.css
+++ b/src/Styling/index.css
@@ -198,4 +198,44 @@ body {
   box-shadow: none;
 }
 
+.transaction {
+  position: relative;
+  grid-area: "main";
+  padding: 2rem;
+}
+.transaction__details {
+  border: 0.1rem solid lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1rem;
+  border-radius: 1.3rem;
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.transaction__date {
+  display: flex;
+}
+.transaction__date p {
+  margin-right: 1rem;
+}
+.transaction__btns {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2rem;
+}
+.transaction__btns button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid lightgray;
+  background: transparent;
+  cursor: pointer;
+}
+.transaction__btns button:hover {
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.transaction__btns button:active {
+  box-shadow: none;
+}
+
 /*# sourceMappingURL=index.css.map */
