--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -189,3 +189,43 @@ body {
     }
   }
 }
+
+.transaction{
+  position: relative;
+  grid-area: 'main';
+  padding: 2rem;
+  &__details{
+    border: 0.1rem solid lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 1rem;
+    border-radius: 1.3rem;
+    box-shadow: 0 0 0.5rem 0.1rem lightgray;
+  }
+  &__date{
+    display: flex;
+    p{
+      margin-right: 1rem;
+    }
+  }
+  &__btns{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem;
+    button{
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      border: 0.1rem solid lightgray;
+      background: transparent;
+      cursor: pointer;
+      &:hover {
+        box-shadow: 0 0 0.5rem 0.1rem lightgray;
+      }
+      &:active {
+        box-shadow: none;
+      }
+    }
+  }
+}
