--- a/src/Styling/index.css
+++ b/src/Styling/index.css
@@ -8,6 +8,9 @@
 * input {
   cursor: text;
 }
+* button {
+  cursor: pointer;
+}
 
 html,
 body {
@@ -136,7 +139,8 @@ body {
 
 .login-form,
 .signup-form,
-.delete-form, .update-form {
+.delete-form,
+.update-form {
   grid-area: "main";
   display: flex;
   flex-direction: column;
@@ -145,7 +149,8 @@ body {
 }
 .login-form input,
 .signup-form input,
-.delete-form input, .update-form input {
+.delete-form input,
+.update-form input {
   margin: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
@@ -153,27 +158,30 @@ body {
 }
 .login-form button,
 .signup-form button,
-.delete-form button, .update-form button {
+.delete-form button,
+.update-form button {
   margin: 1rem;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   border: 0.1rem solid lightgray;
   background: transparent;
-  cursor: pointer;
 }
 .login-form button:hover,
 .signup-form button:hover,
-.delete-form button:hover, .update-form button:hover {
+.delete-form button:hover,
+.update-form button:hover {
   box-shadow: 0 0 0.5rem 0.1rem lightgray;
 }
 .login-form button:active,
 .signup-form button:active,
-.delete-form button:active, .update-form button:active {
+.delete-form button:active,
+.update-form button:active {
   box-shadow: none;
 }
 .login-form p,
 .signup-form p,
-.delete-form p, .update-form p {
+.delete-form p,
+.update-form p {
   color: red;
 }
 
@@ -189,7 +197,6 @@ body {
   border-radius: 0.5rem;
   border: 0.1rem solid lightgray;
   background: transparent;
-  cursor: pointer;
 }
 .confirmation__btns button:hover {
   box-shadow: 0 0 0.5rem 0.1rem lightgray;
@@ -229,12 +236,45 @@ body {
   border-radius: 0.5rem;
   border: 0.1rem solid lightgray;
   background: transparent;
-  cursor: pointer;
 }
 .transaction__btns button:hover {
   box-shadow: 0 0 0.5rem 0.1rem lightgray;
 }
 .transaction__btns button:active {
+  box-shadow: none;
+}
+
+.delete-window {
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  z-index: 1;
+  background: white;
+  width: 50%;
+  height: 30%;
+  border-radius: 1.3rem;
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.delete-window__btns {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.delete-window__btns button {
+  background: transparent;
+  border: 1px solid lightgray;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  transition: all 0.3s;
+}
+.delete-window__btns button:hover {
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.delete-window__btns button:active {
   box-shadow: none;
 }
 
