--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -7,6 +7,9 @@
   input {
     cursor: text;
   }
+  button {
+    cursor: pointer;
+  }
 }
 
 html,
@@ -138,7 +141,8 @@ body {
 
 .login-form,
 .signup-form,
-.delete-form, .update-form {
+.delete-form,
+.update-form {
   grid-area: 'main';
   display: flex;
   flex-direction: column;
@@ -156,7 +160,6 @@ body {
     border-radius: 0.5rem;
     border: 0.1rem solid lightgray;
     background: transparent;
-    cursor: pointer;
     &:hover {
       box-shadow: 0 0 0.5rem 0.1rem lightgray;
     }
@@ -179,7 +182,6 @@ body {
       border-radius: 0.5rem;
       border: 0.1rem solid lightgray;
       background: transparent;
-      cursor: pointer;
       &:hover {
         box-shadow: 0 0 0.5rem 0.1rem lightgray;
       }
@@ -190,11 +192,11 @@ body {
   }
 }
 
-.transaction{
+.transaction {
   position: relative;
   grid-area: 'main';
   padding: 2rem;
-  &__details{
+  &__details {
     border: 0.1rem solid lightgray;
     display: flex;
     flex-direction: column;
@@ -203,23 +205,56 @@ body {
     border-radius: 1.3rem;
     box-shadow: 0 0 0.5rem 0.1rem lightgray;
   }
-  &__date{
+  &__date {
     display: flex;
-    p{
+    p {
       margin-right: 1rem;
     }
   }
-  &__btns{
+  &__btns {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 2rem;
-    button{
+    button {
       padding: 0.5rem 1rem;
       border-radius: 0.5rem;
       border: 0.1rem solid lightgray;
       background: transparent;
-      cursor: pointer;
+      &:hover {
+        box-shadow: 0 0 0.5rem 0.1rem lightgray;
+      }
+      &:active {
+        box-shadow: none;
+      }
+    }
+  }
+}
+
+.delete-window {
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  z-index: 1;
+  background: white;
+  width: 50%;
+  height: 30%;
+  border-radius: 1.3rem;
+  box-shadow: 0 0 .5rem 0.1rem lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  &__btns {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    button {
+      background: transparent;
+      border: 1px solid lightgray;
+      border-radius: 0.5rem;
+      padding: 0.5rem 1rem;
+      transition: all 0.3s;
       &:hover {
         box-shadow: 0 0 0.5rem 0.1rem lightgray;
       }
