--- a/src/Styling/index.css
+++ b/src/Styling/index.css
@@ -278,4 +278,65 @@ body {
   box-shadow: none;
 }
 
+.create-transaction {
+  grid-area: "main";
+  padding: 2rem;
+}
+.create-transaction .confirm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.create-transaction .confirm button {
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid lightgray;
+  background: transparent;
+}
+.create-transaction .confirm button:hover {
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.create-transaction .confirm button:active {
+  box-shadow: none;
+}
+.create-transaction .form {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(7, 1fr);
+  grid-gap: 1rem;
+  padding: 1rem;
+}
+.create-transaction .form__section, .create-transaction .form__btns, .create-transaction .form__errors {
+  grid-column: 2/span 1;
+}
+.create-transaction .form__section {
+  display: flex;
+  flex-direction: column;
+}
+.create-transaction .form__section input {
+  border: 0.1rem solid rgb(204, 204, 204);
+  outline-color: rgb(37, 132, 255);
+  border-radius: 0.3rem;
+  padding: 0.5rem 0.7rem;
+}
+.create-transaction .form__btns {
+  display: flex;
+  justify-content: space-evenly;
+}
+.create-transaction .form__btns button {
+  background: transparent;
+  border: 0.1rem solid lightgray;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  transition: all 0.3s;
+}
+.create-transaction .form__btns button:hover {
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
+}
+.create-transaction .form__btns button:active {
+  box-shadow: none;
+}
+
 /*# sourceMappingURL=index.css.map */
