--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -240,7 +240,7 @@ body {
   width: 50%;
   height: 30%;
   border-radius: 1.3rem;
-  box-shadow: 0 0 .5rem 0.1rem lightgray;
+  box-shadow: 0 0 0.5rem 0.1rem lightgray;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -260,6 +260,69 @@ body {
       }
       &:active {
         box-shadow: none;
+      }
+    }
+  }
+}
+
+.create-transaction {
+  grid-area: 'main';
+  padding: 2rem;
+  .confirm{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    button {
+      margin: 1rem;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      border: 0.1rem solid lightgray;
+      background: transparent;
+      &:hover {
+        box-shadow: 0 0 0.5rem 0.1rem lightgray;
+      }
+      &:active {
+        box-shadow: none;
+      }
+    }
+  }
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(7, 1fr);
+    grid-gap: 1rem;
+    padding: 1rem;
+    &__section,
+    &__btns,
+    &__errors {
+      grid-column: 2 / span 1;
+    }
+    &__section {
+      display: flex;
+      flex-direction: column;
+      input {
+        border: 0.1rem solid rgb(204, 204, 204);
+        outline-color: rgb(37, 132, 255);
+        border-radius: 0.3rem;
+        padding: 0.5rem 0.7rem;
+      }
+    }
+    &__btns {
+      display: flex;
+      justify-content: space-evenly;
+      button {
+        background: transparent;
+        border: 0.1rem solid lightgray;
+        border-radius: 0.5rem;
+        padding: 0.5rem 1rem;
+        transition: all 0.3s;
+        &:hover {
+          box-shadow: 0 0 0.5rem 0.1rem lightgray;
+        }
+        &:active {
+          box-shadow: none;
+        }
       }
     }
   }
