Coded and styled update transaction page/form, and its confirmation

--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -265,7 +265,7 @@ body {
   }
 }
 
-.create-transaction {
+.create-transaction, .update-transaction {
   grid-area: 'main';
   padding: 2rem;
   .confirm{
